syntax = "proto3";

package Handin5;

option go_package = "protoFile/proto";

service Auction {
  rpc Bid(BidRequest) returns (BidResponse);

  rpc Result(ResultRequest) returns (ResultResponse);

  rpc Join(JoinRequest) returns (JoinResponse);
  
  rpc Leave(LeaveRequest) returns (LeaveResponse);
}

message LeaveRequest {
  string bidder_id = 1;
}

message LeaveResponse {
  string goodbye_message = 1;
}

message JoinRequest {
  string bidder_id = 1;
  int64 node_id = 2;
}

message JoinResponse {
  string welcome_message = 1;
}

message BidRequest {
  int64 amount = 1;
  string bidder_id = 2;
  int64 lamTime = 3;
  int64 node_id = 4;
  int64 auction_id = 5;
}

message BidResponse {
  enum BidResult {
    BID_FAIL = 0;
    BID_SUCCESS = 1;
    BID_EXCEPTION = 2;
  }

  BidResult result = 1;
}

message ResultRequest {
  string bidder_id = 1;
}

message ResultResponse {
  enum Outcome {
    AUCTION_NOT_OVER = 0;
    AUCTION_SUCCESS = 1;
    AUCTION_FAIL = 2;
  }

  Outcome outcome = 1;
  int32 highest_bid = 2;
  string highest_bidder = 3;
}